refactor(backend): resovle deprecation warnings, code duplications, and security lints